2013-06-09  David Edelsohn  <dje.gcc@gmail.com>
	    Jan Hubicka  <jh@suse.cz>

	* config/rs6000/rs6000.c (print_operand, 'z'): Remove historical
	hack to mark symbols as used.

2013-06-08  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/57559
	* lra-constraints.c (process_alt_operands): Don't discourage
	memory with known offset for offsetable memory constraint.
	* lra.c (lra_emit_add): Exchange y and z for 2-op add insn.

2013-06-08  Eric Botcazou  <ebotcazou@adacore.com>

	* varasm.c (struct oc_local_state): Reorder fields.
	(output_constructor_bitfield): Replace OUTER parameter with BIT_OFFSET
	and adjust accordingly.
	(output_constructor): Reorder initialization code and adjust call to
	output_constructor_bitfield.

2013-06-07  Sriraman Tallam  <tmsriram@google.com>

	PR c++/57548
	* cp/call.c (build_over_call):  Check if current_function_decl is
	NULL.

2013-06-07  Jan Hubicka  <jh@suse.cz>

	* symtab.c (symtab_resolve_alias): Do not remove alias attribute.

2013-06-07  David Malcolm  <dmalcolm@redhat.com>

	* tree-object-size.c (unknown): Make const.

2013-06-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md (cpu_facility): Add cpu_zarch.
	("*movmem_short", "*clrmem_short", "*cmpmem_short): Use cpu_zarch
	for last alternative in the cpu_facility attribute.

2013-06-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/56315
	* config/arm/arm.md (*xordi3_insn): Change to insn_and_split.
	(xordi3): Change operand 2 constraint to arm_xordi_operand.
	* config/arm/arm.c (const_ok_for_dimode_op): Handle XOR.
	* config/arm/constraints.md (Dg): New constraint.
	* config/arm/neon.md (xordi3_neon): Remove.
	(neon_veor<mode>): Generate xordi3 instead of xordi3_neon.
	* config/arm/predicates.md (arm_xordi_operand): New predicate.

2013-06-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.md (anddi3_insn): Remove duplicate alternatives.
	Clean up alternatives.

2013-06-07  Alan Modra  <amodra@gmail.com>
